--- a/app/package.json
+++ b/app/package.json
@@ -10,13 +10,15 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "firebase": "^9.6.1",
     "nodemon": "^2.0.15",
     "plaid": "^9.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
