--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  steps:
-  - uses: actions/checkout@v2
-  - run: cd frontend
-  - run: npm run lint
+ build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    
+    steps:
+    - uses: actions/checkout@v2
+    - run: cd frontend
+    - run: npm run lint
